frontend/src/styles/main.scss
@use 'variables';

@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');

*,
*::before,
*::after {
  margin: 0;
  box-sizing: border-box;
}

html {
  height: 100%;
  background-color: var(--bg-color);
  text-size-adjust: none;
}

// https://stackoverflow.com/questions/2781549/removing-input-background-colour-for-chrome-autocomplete
input:-webkit-autofill {
  &,
  &:hover,
  &:focus,
  &:active {
    transition-delay: 9999s !important;
    transition-property: background-color, color !important;
  }
}

*::-webkit-scrollbar {
  height: 12px;
  width: 12px
}

*::-webkit-scrollbar-track,
*::-webkit-scrollbar-track:hover,
*::-webkit-scrollbar-track:active {
  background-color: var(--header-color);
}

*::-webkit-scrollbar-thumb,
*::-webkit-scrollbar-thumb:hover,
*::-webkit-scrollbar-thumb:active {
  background-color: var(--scrollbar-color);
}

.n-data-table-th__title {
  user-select: none;
}

